Contact section for form submission

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Best online app to track and record nuzlocke encounters and pokemon. Including level caps, custom games, all routes, and pokémon up to generation 9." />
+    content="The best online app to track and record nuzlocke encounters and pokemon. Including level caps, custom games, all routes, and pokémon up to generation 9." />
   <title>Nuzlocke Tracker</title>
 </head>
 
 <body>
+
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <form name="contact" netlify netlify-honeypot="bot-field" aria-hidden="true" hidden>
+    <select name="type">
+      <option value="bug">Bug</option>
+      <option value="bug">Suggestion</option>
+    </select>
+    <select name="device">
+      <option value="Desktop">Desktop</option>
+      <option value="Mobile">Mobile</option>
+    </select>
+    <textarea name="description"></textarea>
+  </form>
 </body>
 
 </html>
