--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta name="google-site-verification" content="XwrRDsMPrckFQLRLr08o1Cr_fFHzsgun82Bq9Fadmek" />
   <meta name="description"
     content="The best online app to track and record nuzlocke encounters and pokemon. Including level caps, custom games, all routes, and pokémon up to generation 8." />
   <title>Nuzlocke Tracker</title>
