--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
   <meta property="og:locale" content="en_US" />
   <meta property="og:description"
     content="The best online app to track and record nuzlocke encounters and pokemon. Including level caps, custom games, all routes, and pokémon up to generation 8." />
+  <link rel="canonical" href="https://nuzlocke.netlify.app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Nuzlocke Tracker</title>
 </head>
 
