Removed excess words from title in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link rel="canonical" href="https://nuzlocke.netlify.app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Nuzlocke Tracker - Track pokémon encounters</title>
+  <title>Nuzlocke Tracker</title>
 </head>
 
 <body>
