Twitter meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
   <meta property="og:locale" content="en_US" />
   <meta property="og:description"
     content="The best online app to track and record nuzlocke encounters and pokemon. Including level caps, custom games, all routes, and pokémon up to generation 8." />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@relatablecoder" />
+  <meta name="twitter:creator" content="@relatablecoder" />
   <link rel="canonical" href="https://nuzlocke.netlify.app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
