--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
     </select>
     <input name="selectedgame" type="text" />
     <textarea name="description"></textarea>
+    <input name="file" type="file" />
   </form>
 </body>
 
