Included plausible analytics

--- a/public/index.html
+++ b/public/index.html
@@ -58,4 +58,6 @@
   </form>
 </body>
 
+<script defer data-domain="nuzlocke.netlify.app" src="https://plausible.io/js/plausible.js"></script>
+
 </html>
